[gd_scene load_steps=18 format=2]

[ext_resource path="res://world/level.tscn" type="PackedScene" id=1]
[ext_resource path="res://editor/level_editor.gd" type="Script" id=2]
[ext_resource path="res://editor/editor_camera.tscn" type="PackedScene" id=3]

[sub_resource type="InputEventKey" id=1]
control = true
command = true
pressed = true
scancode = 79

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
control = true
command = true
pressed = true
scancode = 83

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]
shift = true
control = true
command = true
pressed = true
scancode = 83

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=7]
shift = true
control = true
command = true
pressed = true
scancode = 90

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventKey" id=9]
control = true
command = true
pressed = true
scancode = 90

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventKey" id=11]
control = true
command = true
scancode = 66

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="ButtonGroup" id=13]

[sub_resource type="ButtonGroup" id=14]

[node name="level_editor" type="Node"]
script = ExtResource( 2 )

[node name="gui" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="mouse_stop" type="Control" parent="gui"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="parts" type="VBoxContainer" parent="gui"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_bar" type="PanelContainer" parent="gui/parts"]
margin_right = 1920.0
margin_bottom = 38.0

[node name="h_box_container" type="HBoxContainer" parent="gui/parts/top_bar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 31.0

[node name="open" type="Button" parent="gui/parts/top_bar/h_box_container"]
margin_right = 55.0
margin_bottom = 24.0
shortcut = SubResource( 2 )
text = "Open.."

[node name="save" type="Button" parent="gui/parts/top_bar/h_box_container"]
margin_left = 59.0
margin_right = 100.0
margin_bottom = 24.0
shortcut = SubResource( 4 )
text = "Save"

[node name="save_as" type="Button" parent="gui/parts/top_bar/h_box_container"]
margin_left = 104.0
margin_right = 173.0
margin_bottom = 24.0
shortcut = SubResource( 6 )
text = "Save As.."

[node name="levels" type="Button" parent="gui/parts/top_bar/h_box_container"]
margin_left = 177.0
margin_right = 238.0
margin_bottom = 24.0
text = "Levels.."

[node name="v_separator" type="VSeparator" parent="gui/parts/top_bar/h_box_container"]
margin_left = 242.0
margin_right = 246.0
margin_bottom = 24.0

[node name="redo" type="Button" parent="gui/parts/top_bar/h_box_container"]
margin_left = 250.0
margin_right = 294.0
margin_bottom = 24.0
disabled = true
shortcut = SubResource( 8 )
text = "Redo"

[node name="undo" type="Button" parent="gui/parts/top_bar/h_box_container"]
margin_left = 298.0
margin_right = 344.0
margin_bottom = 24.0
disabled = true
shortcut = SubResource( 10 )
text = "Undo"

[node name="current_action" type="Label" parent="gui/parts/top_bar/h_box_container"]
modulate = Color( 1, 1, 1, 0.184314 )
margin_left = 348.0
margin_top = 5.0
margin_right = 944.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="gui/parts/top_bar/h_box_container"]
margin_left = 948.0
margin_top = 5.0
margin_right = 1024.0
margin_bottom = 19.0
text = "Level editor"
align = 2

[node name="modified" type="Label" parent="gui/parts/top_bar/h_box_container"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1028.0
margin_top = 5.0
margin_right = 1036.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 0.372549, 0.372549, 1 )
text = "*"
align = 2

[node name="level_name" type="LineEdit" parent="gui/parts/top_bar/h_box_container"]
margin_left = 1040.0
margin_right = 1240.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
placeholder_text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer2" type="Control" parent="gui/parts/top_bar/h_box_container"]
margin_left = 1244.0
margin_right = 1840.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="play" type="Button" parent="gui/parts/top_bar/h_box_container"]
margin_left = 1844.0
margin_right = 1882.0
margin_bottom = 24.0
toggle_mode = true
shortcut = SubResource( 12 )
text = "Play"

[node name="close" type="Button" parent="gui/parts/top_bar/h_box_container"]
margin_left = 1886.0
margin_right = 1906.0
margin_bottom = 24.0
text = "X"

[node name="middle" type="HBoxContainer" parent="gui/parts"]
margin_top = 42.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_vertical = 3

[node name="left_panel" type="PanelContainer" parent="gui/parts/middle"]
margin_right = 76.0
margin_bottom = 1038.0

[node name="v_box_container" type="VBoxContainer" parent="gui/parts/middle/left_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 69.0
margin_bottom = 1031.0

[node name="label_tiles" type="Label" parent="gui/parts/middle/left_panel/v_box_container"]
margin_right = 62.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Tiles"
align = 1

[node name="tiles" type="VBoxContainer" parent="gui/parts/middle/left_panel/v_box_container"]
margin_top = 18.0
margin_right = 62.0
margin_bottom = 18.0

[node name="h_separator" type="HSeparator" parent="gui/parts/middle/left_panel/v_box_container"]
margin_top = 22.0
margin_right = 62.0
margin_bottom = 26.0

[node name="label_entities" type="Label" parent="gui/parts/middle/left_panel/v_box_container"]
margin_top = 30.0
margin_right = 62.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Entities"
align = 1

[node name="entities" type="VBoxContainer" parent="gui/parts/middle/left_panel/v_box_container"]
margin_top = 48.0
margin_right = 62.0
margin_bottom = 48.0

[node name="h_separator2" type="HSeparator" parent="gui/parts/middle/left_panel/v_box_container"]
margin_top = 52.0
margin_right = 62.0
margin_bottom = 56.0

[node name="label_modes" type="Label" parent="gui/parts/middle/left_panel/v_box_container"]
margin_top = 60.0
margin_right = 62.0
margin_bottom = 74.0
size_flags_horizontal = 3
text = "Modes"
align = 1

[node name="modes" type="VBoxContainer" parent="gui/parts/middle/left_panel/v_box_container"]
margin_top = 78.0
margin_right = 62.0
margin_bottom = 170.0

[node name="erase" type="Button" parent="gui/parts/middle/left_panel/v_box_container/modes"]
margin_right = 62.0
margin_bottom = 20.0
toggle_mode = true
group = SubResource( 13 )
text = "Erase"

[node name="add" type="Button" parent="gui/parts/middle/left_panel/v_box_container/modes"]
margin_top = 24.0
margin_right = 62.0
margin_bottom = 44.0
toggle_mode = true
group = SubResource( 13 )
text = "Add"

[node name="replace" type="Button" parent="gui/parts/middle/left_panel/v_box_container/modes"]
margin_top = 48.0
margin_right = 62.0
margin_bottom = 68.0
toggle_mode = true
pressed = true
group = SubResource( 13 )
text = "Replace"

[node name="pick" type="Button" parent="gui/parts/middle/left_panel/v_box_container/modes"]
margin_top = 72.0
margin_right = 62.0
margin_bottom = 92.0
toggle_mode = true
text = "Pick"

[node name="entity_editor" type="VBoxContainer" parent="gui/parts/middle/left_panel/v_box_container"]
visible = false
margin_top = 174.0
margin_right = 66.0
margin_bottom = 196.0

[node name="h_separator2" type="HSeparator" parent="gui/parts/middle/left_panel/v_box_container/entity_editor"]
margin_right = 66.0
margin_bottom = 4.0

[node name="label_properties" type="Label" parent="gui/parts/middle/left_panel/v_box_container/entity_editor"]
margin_top = 8.0
margin_right = 66.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Properties"
align = 1

[node name="file_dialog" type="FileDialog" parent="gui"]
margin_right = 358.0
margin_bottom = 130.0
resizable = true

[node name="levels_dialog" type="AcceptDialog" parent="gui"]
margin_left = 252.0
margin_top = 141.0
margin_right = 999.0
margin_bottom = 556.0
window_title = "Select Level..."
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout" type="VBoxContainer" parent="gui/levels_dialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 739.0
margin_bottom = 379.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pack" type="HBoxContainer" parent="gui/levels_dialog/layout"]
margin_right = 731.0
margin_bottom = 24.0

[node name="label" type="Label" parent="gui/levels_dialog/layout/pack"]
margin_top = 5.0
margin_right = 33.0
margin_bottom = 19.0
text = "Pack:"

[node name="path" type="LineEdit" parent="gui/levels_dialog/layout/pack"]
margin_left = 37.0
margin_right = 668.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
placeholder_text = "(none)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="open" type="Button" parent="gui/levels_dialog/layout/pack"]
margin_left = 672.0
margin_right = 731.0
margin_bottom = 24.0
text = "Open..."

[node name="levels_label" type="Label" parent="gui/levels_dialog/layout"]
margin_top = 28.0
margin_right = 731.0
margin_bottom = 42.0
text = "Levels (drag to reorder):"

[node name="levels_container" type="VBoxContainer" parent="gui/levels_dialog/layout"]
margin_top = 46.0
margin_right = 731.0
margin_bottom = 46.0

[node name="h_separator" type="HSeparator" parent="gui/levels_dialog/layout"]
margin_top = 50.0
margin_right = 731.0
margin_bottom = 54.0

[node name="new_level" type="Button" parent="gui/levels_dialog/layout"]
margin_top = 58.0
margin_right = 731.0
margin_bottom = 78.0
toggle_mode = true
pressed = true
group = SubResource( 14 )
text = "New level"

[node name="level" parent="." instance=ExtResource( 1 )]

[node name="editor_camera" parent="." instance=ExtResource( 3 )]
[connection signal="gui_input" from="gui/mouse_stop" to="." method="process_input"]
[connection signal="pressed" from="gui/parts/top_bar/h_box_container/open" to="." method="open_pack_dialog"]
[connection signal="pressed" from="gui/parts/top_bar/h_box_container/save" to="." method="save_pack"]
[connection signal="pressed" from="gui/parts/top_bar/h_box_container/save_as" to="." method="save_pack_as_dialog"]
[connection signal="pressed" from="gui/parts/top_bar/h_box_container/levels" to="." method="switch_level_dialog"]
[connection signal="pressed" from="gui/parts/top_bar/h_box_container/redo" to="." method="redo"]
[connection signal="pressed" from="gui/parts/top_bar/h_box_container/undo" to="." method="undo"]
[connection signal="toggled" from="gui/parts/top_bar/h_box_container/play" to="." method="play_toggled"]
[connection signal="pressed" from="gui/parts/middle/left_panel/v_box_container/modes/erase" to="." method="select_erase"]
[connection signal="pressed" from="gui/parts/middle/left_panel/v_box_container/modes/add" to="." method="select_add"]
[connection signal="pressed" from="gui/parts/middle/left_panel/v_box_container/modes/replace" to="." method="select_nonerase"]
[connection signal="pressed" from="gui/levels_dialog/layout/pack/open" to="." method="open_pack_dialog"]
